--- a/app/partials/index/main.html
+++ b/app/partials/index/main.html
@@ -5,3 +5,5 @@
 
 <md-button ng-click="play()" class="md-primary">Play</md-button>
 <md-button ng-click="pause()" class="md-accent">Pause</md-button>
+
+<div style="background-color: #ccc; height: 100px;" droppable>Перетащите сюда объекты</div>
