--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,6 +1,4 @@
 html, body {
-    min-height: 100%;
-    height: 100%;
     margin: 0 !important;
     padding: 0 !important;
 }
@@ -12,8 +10,12 @@ html {
     -webkit-text-size-adjust: 100%;
     -webkit-font-smoothing: antialiased;
 }
+html, body {
+    height: 100% !important;
+}
 body {
     overflow-x: hidden;
+    overflow-y: scroll;
     background-color: #E9E9E9;
 }
 svg:not(:root) {
@@ -34,7 +36,6 @@ textarea {
     border: 0;
 }
 .view {
-    min-height: 100%;
     height: 100%;
 }
 .page {
@@ -45,8 +46,8 @@ textarea {
 }
 .page__inner {
     padding: 64px 0 0;
-    background-color: #fff;
-    height: 100%;
+    min-height: 100%;
+    background-color: #E9E9E9;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -56,17 +57,18 @@ textarea {
     width: 100%;
 }
 .dropzone {
-    height: 100%;
+    min-height: 100%;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    background-color: rgba(233, 233, 233, 0.75);
     -webkit-transition: background .1s ease-out;
     -moz-transition: background .1s ease-out;
     -ms-transition: background .1s ease-out;
     -o-transition: background .1s ease-out;
     transition: background .1s ease-out;
     cursor: pointer;
+    position: absolute;
+    width: 100%;
 }
 .dropzone__center {
     height: 200px;
@@ -120,9 +122,6 @@ textarea {
 .droppable_over .dropzone__image:hover {
     background-color: #4f7ff0;
 }
-.page__inner {
-    background-color: rgba(233, 233, 233, 0.75);
-}
 .tracks {
     margin: 0 auto;
     max-width: 900px;
@@ -149,7 +148,7 @@ textarea {
 }
 .player__inner {
     background: #FFF;
-    box-shadow: 0 -2px 3px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 -2px 0 0 rgba(0, 0, 0, 0.15);
     max-width: 900px;
     margin: 0 auto;
     position: relative;
@@ -161,6 +160,16 @@ textarea {
     z-index: 501;
     width: 100%;
     height: 100%;
+    background-color: rgba(255, 255, 255, 0.2);
+    box-sizing: border-box;
+    -webkit-transition: background-color 5s ease-out;
+    -moz-transition: background-color 5s ease-out;
+    -ms-transition: background-color 5s ease-out;
+    -o-transition: background-color 5s ease-out;
+    transition: background-color 5s ease-in;
+}
+.player__inner-track_type_innactive {
+    background-color: #FFF;
 }
 .player {
     position: fixed;
@@ -178,15 +187,33 @@ textarea {
     width: 100%;
     height: 100%;
     box-sizing: content-box;
-
+    overflow: hidden;
 }
 .player__play, .player__pause {
     cursor: pointer;
+}
+.player__play button, .player__pause button {
+    border-radius: 50%;
+    background: rgba(255, 255, 255, 0.5);
+    overflow: visible;
+}
+.player__play button:hover, .player__pause button:hover {
+    background: rgba(255, 255, 255, 0.6) !important;
+    overflow: visible;
 }
 .player__waveform {
     height: 100%;
     -webkit-filter: blur(7px);
     filter: blur(7px);
     -moz-filter: blur(7px);
-    padding: 0 5px;
+    padding: 5px 0 5px;
+}
+.dropzone__image:active {
+    background-color: #4f7ff0;
+}
+.track__spinner {
+    position: absolute;
+    height: 100%;
+    top: 24%;
+    right: 23px;
 }
