--- a/app/partials/index/main.html
+++ b/app/partials/index/main.html
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="tracks" ng-show="tracks.length > 0">
-            <div class="tracks__inner">
+            <div class="tracks__inner" ng-class="{'tracks__inner_offset': curPanelState === 'opened'}">
                 <md-button class="track" ng-click="playTrack(track, $event)" ng-repeat="track in tracks">
                     <div class="track__name">{{track.name}}</div>
                     <div class="track__artist">{{track.artist}}</div>
@@ -39,7 +39,7 @@
             </div>
         </div>
     </div>
-    <div class="player" ng-show="playing">
+    <div class="player" ng-show="playing" ng-class="{'player_state_opened': curPanelState === 'opened'}">
         <div class="player__inner">
             <div class="player__overlay">
                 <div class="player__waveform"></div>
