Added breathtaking effects to drag'n'drop

--- a/app/partials/index/main.html
+++ b/app/partials/index/main.html
@@ -6,7 +6,7 @@
                     <md-icon md-svg-icon="app/img/icons/ic_audiotrack_48px.svg" style="color: white;"></md-icon>
                 </md-button>
                 <h2 style="color: white;">
-                    <span>Аудио Плеер</span>
+                    <span shri-i18n="app_name_short">Аудио Плеер</span>
                 </h2>
                 <span flex></span>
                 <!--<md-button class="md-icon-button" aria-label="Favorite">
@@ -25,7 +25,7 @@
                     <div class="dropzone__image-src">
                         <md-icon md-svg-icon="app/img/icons/ic_audiotrack_48px.svg" style="color: white;"></md-icon>
                     </div>
-                    <div class="dropzone__message">Перетащите сюда Вашу музыку</div>
+                    <div class="dropzone__message" shri-i18n="draggable_message"></div>
                 </div>
             </div>
         </div>
