--- a/app/partials/index/main.html
+++ b/app/partials/index/main.html
@@ -16,28 +16,30 @@
         </md-toolbar>
     </md-content>
     <div class="page__inner">
-        <div class="dropzone" droppable ng-show="tracks.length == 0 && !loading">
-            <input hidden type="file" multiple id="files_input" accept="audio/*" onchange="angular.element(this).scope().openFiles(event)">
-            <div class="dropzone__center">
-                <div class="dropzone__jump-block dropzone__jump-block_dir_left"></div>
-                <div class="dropzone__jump-block dropzone__jump-block_dir_right"></div>
-                <div class="dropzone__image">
-                    <div class="dropzone__image-src">
-                        <md-icon md-svg-icon="app/img/icons/ic_audiotrack_48px.svg" style="color: white;"></md-icon>
+        <div class="page__content">
+            <div class="dropzone" droppable ng-show="tracks.length == 0 && !loading">
+                <input hidden type="file" multiple id="files_input" accept="audio/*" onchange="angular.element(this).scope().openFiles(event)">
+                <div class="dropzone__center">
+                    <div class="dropzone__jump-block dropzone__jump-block_dir_left"></div>
+                    <div class="dropzone__jump-block dropzone__jump-block_dir_right"></div>
+                    <div class="dropzone__image">
+                        <div class="dropzone__image-src">
+                            <md-icon md-svg-icon="app/img/icons/ic_audiotrack_48px.svg" style="color: white;"></md-icon>
+                        </div>
+                        <div class="dropzone__message" shri-i18n="draggable_message"></div>
                     </div>
-                    <div class="dropzone__message" shri-i18n="draggable_message"></div>
                 </div>
             </div>
-        </div>
-        <div class="tracks" ng-show="tracks.length > 0">
-            <div class="tracks__inner" ng-class="{'tracks__inner_offset': curPanelState === 'opened' && tracks.length > 4}">
-                <md-button class="track" md-ripple-size="partial" ng-click="playTrack(track, $event)" ng-repeat="track in tracks">
-                    <div class="track__name">{{track.name}}</div>
-                    <div class="track__artist">{{track.artist}}</div>
-                    <div class="track__spinner" ng-show="track.id == curTrack.id && loading">
-                        <md-progress-circular md-mode="indeterminate"></md-progress-circular>
-                    </div>
-                </md-button>
+            <div class="tracks" ng-show="tracks.length > 0">
+                <div class="tracks__inner" ng-class="{'tracks__inner_offset': curPanelState === 'opened' && tracks.length > 4}">
+                    <md-button class="track repeated-item" md-ripple-size="partial" ng-click="playTrack(track, $event)" ng-repeat="track in tracks">
+                        <div class="track__name">{{track.name}}</div>
+                        <div class="track__artist">{{track.artist}}</div>
+                        <div class="track__spinner" ng-show="track.id == curTrack.id && loading">
+                            <md-progress-circular md-mode="indeterminate"></md-progress-circular>
+                        </div>
+                    </md-button>
+                </div>
             </div>
         </div>
     </div>
