--- a/app/partials/modals/settings.html
+++ b/app/partials/modals/settings.html
@@ -22,7 +22,7 @@
         </md-dialog-content>
         <div class="md-actions" layout="row">
             <span flex></span>
-            <md-button ng-click="save()" style="margin-right: 20px; margin-bottom: 20px;">
+            <md-button ng-click="save()" style="margin-right: 20px;">
                 Сохранить
             </md-button>
         </div>
